--- a/.github/workflows/.yml
+++ b/.github/workflows/.yml
@@ -20,17 +20,30 @@ jobs:
         distribution: 'temurin'
         java-version: '18'
 
-    - name: Build with Maven
-      run: ./mvnw clean install
+    - name: Build and test with Maven
+      run: |
+        cd bookstore
+        chmod +x mvnw
+        ./mvnw clean install
 
-    - name: Build Docker Image
-      run: docker build -t bookstore-app bookstore
+    - name: Check if JAR exists
+      run: |
+        echo "Listing contents of bookstore/target..."
+        ls -l bookstore/target
 
-    - name: Stop and Remove existing container
+        echo "Checking if JAR exists..."
+        if [ -z "$(ls bookstore/target/*.jar 2>/dev/null)" ]; then
+          echo "ERROR: No JAR file found in bookstore/target"
+          exit 1
+        fi
+
+    - name: Build Docker image
+      run: docker build -t bookstore-app ./bookstore
+
+    - name: Stop and remove existing container
       run: |
         docker stop bookstore-container || true
         docker rm bookstore-container || true
 
-    - name: Run Docker Container
-      run: |
-        docker run -d -p 8080:8080 --name bookstore-container bookstore-app
+    - name: Run Docker container
+      run: docker run -d -p 8080:8080 --name bookstore-container bookstore-app
