--- a/bookstore/docker-compose.yml
+++ b/bookstore/docker-compose.yml
@@ -1,19 +1,9 @@
 version: '3.8'
 
 services:
-  app:
-    build: .
-    ports:
-      - "8080:8080"
-    environment:
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/bookstore_db
-      - SPRING_DATASOURCE_USERNAME=bookstore_user
-      - SPRING_DATASOURCE_PASSWORD=0000
-    depends_on:
-      - db
-
+  # PostgreSQL Database for Bookstore App
   db:
-    image: postgres:15
+    image: postgres:17
     environment:
       POSTGRES_DB: bookstore_db
       POSTGRES_USER: bookstore_user
@@ -21,7 +11,29 @@ services:
     ports:
       - "5432:5432"
     volumes:
-      - pgdata:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - bookstore-network
+
+  # Bookstore Application
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    depends_on:
+      - db
+    ports:
+      - "8080:8080"
+    environment:
+      SPRING_DATASOURCE_URL: jdbc:postgresql://db:5432/bookstore_db
+      SPRING_DATASOURCE_USERNAME: bookstore_user
+      SPRING_DATASOURCE_PASSWORD: 0000
+      SPRING_JPA_HIBERNATE_DDL_AUTO: update
+    networks:  # ✅ THIS LINE WAS MISSING
+      - bookstore-network
+
+networks:
+  bookstore-network:
 
 volumes:
-  pgdata:
+  db_data:
