--- a/bookstore/src/main/resources/application.properties
+++ b/bookstore/src/main/resources/application.properties
@@ -1,16 +1,8 @@
-# PostgreSQL connection
-spring.datasource.url=jdbc:postgresql://localhost:5432/bookstore_db
-spring.datasource.username=bookstore_user
-spring.datasource.password=0000
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
-# JPA settings
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-
-# Disable H2 console if used
-# spring.h2.console.enabled=true
-# spring.h2.console.path=/h2-console
+logging.level.org.springframework.core.env=DEBUG
