--- a/.github/workflows/bookstore-ci-cd.yml.yml
+++ b/.github/workflows/bookstore-ci-cd.yml.yml
@@ -42,7 +42,9 @@ jobs:
       uses: actions/checkout@v4
 
     - name: Build Docker image for scanning
-      run: docker build -t bookstore-app ./bookstore
+      run: |
+       cd bookstore
+       docker build -t bookstore-app .
 
     - name: Run Trivy scan
       run: |
