--- a/bookstore/pom.xml
+++ b/bookstore/pom.xml
@@ -28,6 +28,8 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<sonar.projectKey>bookstore-app</sonar.projectKey>
+                <sonar.host.url>${env.SONAR_HOST_URL}</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -89,8 +91,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+      <groupId>org.sonarsource.scanner.maven</groupId>
+      <artifactId>sonar-maven-plugin</artifactId>
+      <version>3.9.1.2184</version>
+           </plugin>
 
 		</plugins>
 	</build>
+	
 
 </project>
